Agregado informes que faltaban. Falata grafico

--- a/templates/lineaBaseManager.html
+++ b/templates/lineaBaseManager.html
@@ -276,7 +276,8 @@
 						srcformat : 'Y-m-d',
 						newformat : 'd/m/Y'
 					},
-					search : false
+					search : false,
+					hidden: true
 				}, {
 					name : 'fechaFinalizacion',
 					index : 'fechaFinalizacion',
@@ -288,7 +289,8 @@
 						srcformat : 'Y-m-d',
 						newformat : 'd/m/Y'
 					},
-					search : false
+					search : false,
+					hidden: true
 				},{
 					name : 'costo',
 					index : 'costo',
