--- a/templates/baseMiembro.html
+++ b/templates/baseMiembro.html
@@ -87,6 +87,7 @@
 				valorelegido=$('#proyectosUsuario').val();
 				//alert('valor elegido' + valorelegido)
 				//alert('valor en sesion '+ valorenSesion)
+				//alert("el valor de combo: "+$('#proyectosUsuario').val()+" el valor que estaba: "+valorenSesion);
 				if(valorenSesion!=valorelegido){ //si es que el valor del combo actual es diferente  
 													//del seleccionado, se hace el post y reload de la pagina, la primera vez el de la sesion es 0
 				
@@ -95,20 +96,7 @@
 							idProyecto : idProyecto
 						},
 						function(data, status) {
-							/* funcion que maneja el resultruc : $("#ruc").val(),ado de la invocación */
-		
-							/* si hay error se muestra el mensaje*/
-							/*if (data.substring(0, 1) == 't') {
-								mostrarMensaje(
-										"Error",data.substring(2));
-								
-							}*/
-							/* se indicar la recarga de la tabla */
-							//location.reload();
-							
-							
-							
-							valorenSesion={{session['idProyecto']}};
+							valorenSesion=valorelegido;
 							var pathname = window.location.pathname;
 							switch (pathname){
 								case '/estadoFase/':
