--- a/templates/itemsManager.html
+++ b/templates/itemsManager.html
@@ -285,7 +285,7 @@
 					<select id="tipoItemIdComboBox"
 						style="display: block; margin-bottom: 12px; padding: 0.4em; width: 80%;"
 						class="ui-widget-content ui-corner-all">
-						<option value='0'>Ninguno</option>
+						<option value='-1'>Ninguno</option>
 					</select>
 					</td>
 					
@@ -411,7 +411,7 @@
    	function controlTI(){
 		var error=0; 
 		
-		if (atributosTI!=null && $('#tipoItemIdComboBox').val!=0){
+		if (atributosTI!=null && $('#tipoItemIdComboBox').val()!=0){
 			var len;
 			for(var i=0; i<atributosTI.length;i++){
 				//alert("#input_"+atributosTI[i]["nombreAtributo"])
@@ -423,9 +423,9 @@
 					if (len > atributosTI[i]["longitudCadena"] || len <= 0) {
 						$("#input_"+atributosTI[i]["idAtributos"]).css('border-color', 'red');
 						$("#input_"+atributosTI[i]["idAtributos"]).after("<div id='Ediv_'"+atributosTI[i]["idAtributos"]+"'><input title=\"20 caracteres max\" readonly tabIndex=\"-1\"" +
-								"type=\"text\" name=\"EnombreTipoItem\" id=\"EnombreTipoItem\""+
+								"type=\"text\" value='Ingrese caracteres en rango [1-"+ parseInt(atributosTI[i]["longitudCadena"]) + "] '"+
 									"float=\"left\""+
-									"style=\"width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;\" /></div>")
+									"style=\"width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;color:red;\" /></div>")
 						error = 1;
 					}
 				}else if(atributosTI[i]["tipoPrimario"]=="Numerico"){
@@ -436,21 +436,25 @@
 						if(len!=0 && valor.indexOf('.')!=-1){ //si es que no tiene "," entonces se debe el len=1 para que pase la prueba
 							valor=valor.substring(valor.indexOf('.')+1,valor.length)
 							len = valor.length;
-						}else{
-							len=atributosTI[i]["longitudCadena"];
-											
 						}
 						
-						if (len > atributosTI[i]["longitudCadena"] || len <= 0) {
+						if (len > atributosTI[i]["longitudCadena"]) {
 							$("#input_"+atributosTI[i]["idAtributos"]).css('border-color', 'red');
 							error = 1;
 							$("#input_"+atributosTI[i]["idAtributos"]).after("<div id='Ediv_'"+atributosTI[i]["idAtributos"]+"'><input title=\"20 caracteres max\" readonly tabIndex=\"-1\"" +
-									"type=\"text\" value='Maximo "+ parseInt(atributosTI[i]["longitudCadena"]) + " caracteres'"+
+									"type=\"text\" value='Precision del entero: "+ parseInt(atributosTI[i]["longitudCadena"]) + " '"+
 										"float=\"left\""+
-										"style=\"width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;\" /></div>")
+										"style=\"width: 200px; border: none; display: block; margin-bottom: 2px; padding: 0.4em;color:red;\" /></div>")
+							
+						}else if(len<=0){
+							$("#input_"+atributosTI[i]["idAtributos"]).css('border-color', 'red');
+							error = 1;
+							$("#input_"+atributosTI[i]["idAtributos"]).after("<div id='Ediv_'"+atributosTI[i]["idAtributos"]+"'><input title=\"20 caracteres max\" readonly tabIndex=\"-1\"" +
+									"type=\"text\" value='Campo vacio. Ingrese entero con precision: "+ parseInt(atributosTI[i]["longitudCadena"]) + " '"+
+										"float=\"left\""+
+										"style=\"width: 300px; border: none; display: block; margin-bottom: 2px; padding: 0.4em;color:red;\" /></div>")
 							
 						}
-					
 				}else{
 					
 					len = $("#input_"+atributosTI[i]["idAtributos"]).val().length;
@@ -458,9 +462,9 @@
 					if (len <= 0) {
 						$("#input_"+atributosTI[i]["idAtributos"]).css('border-color', 'red');
 						$("#input_"+atributosTI[i]["idAtributos"]).after("<div id='Ediv_'"+atributosTI[i]["idAtributos"]+"'><input title=\"20 caracteres max\" readonly tabIndex=\"-1\"" +
-								"type=\"text\" value='Maximo "+ parseInt(atributosTI[i]["longitudCadena"]) + " caracteres'"+
+								"type=\"text\" value='Campo vacio. Ingrese "+atributosTI[i]["tipoPrimario"]+"'"+
 									"float=\"left\""+
-									"style=\"width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;\" /></div>")
+									"style=\"width: 200px; border: none; display: block; margin-bottom: 12px; padding: 0.4em;color:red;\" /></div>")
 						error = 1;
 					}
 				
@@ -1377,8 +1381,20 @@
 								+ atrib.nombreFase, atrib.idFase);
 						bandera = true
 					});
-
+					
+					var myPostData = $('#listaItems').jqGrid("getGridParam", "postData");
+					delete myPostData.idF;
+					delete myPostData.idP;
+					$('#listaItems').setGridParam({
+						postData : {
+							idF : '0',
+							idP : '0'
+						}
+					});
 					$('#listaItems').trigger("reloadGrid");
+					
+					
+					
 					/*//aca se agrega al postData el nuevo valor de idFase para hacer la consulta desde el grid	
 					var myPostData = $('#listaItems').jqGrid("getGridParam",
 							"postData");
@@ -1393,6 +1409,19 @@
 				});
 
 	}
+	
+	function informeHistorial(){
+		
+		var rowItem = $('#listaItems').jqGrid('getGridParam', 'selrow');
+		if (rowItem == null) {
+			//window.alert("Debe seleccionar un item");
+			mostrarMensaje("Atencion","Debe seleccionar un Item");
+			return;
+		}
+		var rowdata = $('#listaItems').getRowData(rowItem);
+		window.open('/informeHistorialItems?idProyecto='+retornaValorenSesion()+'&idItem='+rowdata.idItem,'Informe',"location=0")
+	}
+	
 	function retornaValorComboBoxFases() {
 
 		var r = $("#comboBoxFases").val();
@@ -1449,7 +1478,9 @@
 				value="Pendiente/Activo" onclick='setPendiente()' />
 
 				<input id="btAprobar" type="button" name="nuevo"
-				value="Aprobar" onclick='aprobarItem()' /><br></br>
+				value="Aprobar" onclick='aprobarItem()' />
+				<input id="btInformeHistorial" type="button" name="btInformeHistorial"
+				value="Informe: Historial de Item" onclick='informeHistorial()' /><br></br>
 			<script>
 				$("#btAgregar").button();
 				$("#btModificar").button();
@@ -1460,6 +1491,7 @@
 				$("#btArchivos").button();
 				$("#btPendiente").button();
 				$("#btAprobar").button();
+				$("#btInformeHistorial").button();
 			</script>
 		</div></td>
 
