--- a/templates/proyectoManager.html
+++ b/templates/proyectoManager.html
@@ -2840,7 +2840,7 @@ var banderaRol;
 			return;
 		}
 		var rowdata = $('#list').getRowData(rowItem);
-		window.open('/informeSC?idProyecto='+rowdata.idProyecto,'Informe',"location=0")
+		window.open('/informeSC?idProyecto='+rowdata.idProyecto,'Informe',"width=600, height=400","location=0")
 	}
 	function informeItems(){
 		
@@ -2851,7 +2851,7 @@ var banderaRol;
 			return;
 		}
 		var rowdata = $('#list').getRowData(rowItem);
-		window.open('/informeListaItems?idProyecto='+rowdata.idProyecto,'Informe',"location=0")
+		window.open('/informeListaItems?idProyecto='+rowdata.idProyecto,'Informe',"width=600, height=400","location=0")
 	}
 	
 	function mostrarMensaje(titulo, mensaje) {
